# aiide-full

./: .gitignore  README.md  check_final.py  check_final_v2.py  check_kotlin.py  check_syntax.py  debug2.py  debug3.py  debug4.py  debug_raw.py  test_verify1.kts  test_verify1.py  test_verify2.py  test_verify3.py  test_verify4.py
android/: build.gradle.kts  mise.toml  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/aiide/: AIIDEApp.kt  AgentDecisionTimelineEngine.kt  AgentStatusCapsuleEngine.kt  AtomicVerificationChain.kt  AutoSkillInvoker.kt  CodeAnnotationEngine.kt  CodeQualityGate.kt  CodeRefiner.kt  CodeReviewEngine.kt  ContextCompressor.kt  CortexFlowEngine.kt  CrossAgentCollaboration.kt  CrossFileContextEngine.kt  DevSwarmEngine.kt  EventLogger.kt  HumanInTheLoopEngine.kt  IntentCompletionEngine.kt  IntentFabricEngine.kt  IntentPolishingEngine.kt  IntentSpecGenerator.kt  MainActivity.kt  (+31 more)
android/app/src/main/res/values/: strings.xml
docs/: AIIDE_VS_CLAUDE_CODE_REPORT.md  ARCHITECTURE.md  AUDIT_REPORT.md  BLUEPRINT.md  OPEN_SOURCE_PREPARATION.md  PER_FILE_AUDIT_REPORT.md  PLATFORM_CAPABILITIES.md  PROJECT_DOCUMENTATION.md  PROJECT_SUMMARY.md  PROJECT_UPDATE_INTENT_GRAPH.md  ROADMAP.md
docs/sctp-protocol/: SPEC.md
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/algorithm/: bloom_filter.rs  consistent_hash.rs  lru.rs  mod.rs
engine/src/context/: mod.rs
engine/src/file_graph/: mod.rs
engine/src/memory/: mod.rs
engine/src/observe/: mod.rs
(+1 files in other folders)
