[package]
name = "aiide-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = "0.6"
sha2 = "0.10"
hex = "0.4"
cxx = "1.0"
regex = "1"